<resources>
    <string name="app_name">RunInTest</string>
    <string name="testAll">Test</string>
    <string name="testResult">Result</string>
    <string name="testCount">Count</string>
    <string name="wifi_item">WIFI</string>
    <string name="bt_item">BT</string>
    <string name="camera_item">CAMERA</string>
    <string name="gps_item">GPS</string>
    <string name="tone_item">TONE</string>
    <string name="reboot_test">重启测试</string>
    <string name="reboot_with_wifi">reboot wifi test</string>
    <string name="reboot_with_blueteeth">reboot blueteeth test</string>
    <string name="reboot_with_gps">reboot gps test</string>
    <string name="reboot_with_fm">reboot fm test</string>
    <string name="ddr_test_result">ddr test</string>
    <string name="camera_test_result">camera test</string>
    <string name="emmc_test_result">emmc test</string>
    <string name="call_test_result">call test</string>
    <string name="up_down_EarphoneTest">Earphone Test</string>
    <string name="up_down_LSensorTest">LSensor Test</string>
    <string name="up_down_PSenserTest">PSensor Test</string>
    <string name="up_down_VideoPlayTest">VideoPlay Test</string>
    <string name="up_down_MicRecorderTest">MicRecorder Test</string>
    <string name="up_down_LcdAgeTest">LcdAge Test</string>
    <string name="up_down_GSensorTest">GSensor Test</string>
    <string name="up_down_PSensorTest">PSensor Test</string>
    <string name="up_down_test">升降测试</string>
    <string name="up_down_background">背光测试</string>
    <string name="up_down_LCD">LCD测试</string>
    <string name="up_down_Speaker">Speaker测试</string>
    <string name="up_down_Sensor">传感器测试</string>
    <string name="up_down_Video">视频测试</string>
    <string name="up_down_Reveiver">Receiver测试</string>
    <string name="camera_test">Camera测试</string>
    <string name="camera_test_front">前置Camera测试</string>
    <string name="camera_test_back">后置Camera测试</string>
    <string name="emerg_call_test">紧急拨号测试</string>
    <string name="emmc_test">EMMC测试</string>
    <string name="calls_test">CALL测试</string>
    <string name="ddr_test">DDR测试</string>
    <string name="test_info">camera test info</string>
    <string name="reboothint">默认18次</string>
    <string name="updownhint">默认18次</string>
    <string name="camerahint">默认100次</string>
    <string name="emmchint">默认2500次</string>
    <string name="callshint">默认18次</string>
    <string name="ddrhint">默认89次</string>
    <string name="emmc_test_text">Emmc test text</string>
    <string name="vibrator_ring_test">震铃测试</string>
    <string name="vibrator_ring_text">vibrator ring test info</string>
    <string name="rebootnumber">重启测试次数</string>
    <string name="updownnumber">升降测试次数</string>
    <string name="cameranumber">Camera测试次数</string>
    <string name="emmcnumber">Emmc测试次数</string>
    <string name="callsnumber">CALL测试次数</string>
    <string name="ddrnumber">Ddr测试次数</string>
    <string name="savenumber">保存</string>
    <string name="testnumberset">设置测试次数</string>
    <string name="defaultnumber">设置默认次数</string>
    <string name="default_number_num">默认次数:</string>
    <string name="not_support">不支持</string>
    <string name="not_test">未测试</string>
    <string name="hello">欢迎来到工厂模式</string>
    <string name="Settings">设置</string>
    <string name="AutoTest">测试结果</string>
    <string name="AllTest">整机测试</string>
    <string name="Packageerror">出错了,无法找到应用包！</string>
    <string name="PackageIerror">内部错误</string>
    <string name="BatteryLog">电源</string>
    <string name="battery_info_status_label">充电状态:</string>
    <string name="battery_info_scale_label">电池电量:</string>
    <string name="battery_info_level_label">当前电量:</string>
    <string name="battery_info_health_label">电源状况:</string>
    <string name="battery_info_technology_label">电源技术:</string>
    <string name="battery_info_voltage_label">当前电压:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">电源温度:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">自启动的时间:</string>
    <string name="battery_info_awake_battery">对电池唤醒时间:</string>
    <string name="battery_info_awake_plugged">充电时间:</string>
    <string name="battery_info_screen_on">屏幕打开时间:</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">充电</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">未充电</string>
    <string name="battery_info_status_full">满</string>
    <string name="battery_info_health_unknown">未知</string>
    <string name="battery_info_health_good">很好</string>
    <string name="battery_info_health_overheat">过热</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">电压过高</string>
    <string name="battery_info_health_unspecified_failure">未知错误</string>
    <string name="TouchScreen">触屏</string>
    <string name="PointTest">点测试</string>
    <string name="LineTest">线测试</string>
    <string name="Result">查看结果</string>
    <string name="Offset">偏移量：</string>
    <string name="TouchComplete">测试完成</string>
    <string name="Error">错误</string>
    <string name="DrawError">绘制出错！</string>
    <string name="Again">重试</string>
    <string name="GoOn">继续</string>
    <string name="BackLight">背景灯</string>
    <string name="Display_lcd_Text">背景灯</string>
    <string name="Memory">内存</string>
    <string name="Audio">声音</string>
    <string name="Camera">相机</string>
    <string name="Camera_takepic">拍照</string>
    <string name="Camera_notfound">未检测到前置摄像头</string>
    <string name="WiFi">WLAN</string>
    <string name="WiFi_success">测试成功</string>
    <string name="WiFi_failed">测试失败</string>
    <string name="WiFi_scaning">正在查找中</string>
    <string name="WiFi_info_closeing">WLAN正在关闭中</string>
    <string name="WiFi_info_close">WLAN已经关闭</string>
    <string name="WiFi_info_opening">WLAN正在打开</string>
    <string name="WiFi_info_open">WLAN已经打开</string>
    <string name="WiFi_info_unknown">未知状态</string>
    <string name="WiFi_connecting">正在连接</string>
    <string name="WiFi_notfound_openap">未找到开放的连接点</string>
    <string name="HeadSet">耳机</string>
    <string name="HeadSet_plugged">耳机已插入,如果有耳机接听键可按下测试。</string>
    <string name="HeadSet_unplugged">耳机未插入</string>
    <string name="fm_opened">"当前FM状态：已打开"</string>
    <string name="fm_closed">"当前FM状态：已关闭"</string>
    <string name="HeadSet_tips">请插入耳机进行测试</string>
    <string name="HeadSet_hook">耳机接听键被按下，进入语音回环！</string>
    <string name="HeadSet_hook_message">请确认拨打电话时长按耳机Hook键是否可以挂断?</string>
    <string name="GPS">GPS</string>
    <string name="GPS_open">请打开GPS</string>
    <string name="GPS_connect">GPS 已打开, 正在连接</string>
    <string name="GPS_normal">GPS 正常</string>
    <string name="GPS_satelliteNum">GPS 已搜索到卫星数 :</string>
    <string name="GPS_Signal">GPS 信号 :</string>
    <string name="GPS_Success">成功</string>
    <string name="GPS_time">耗时： %s 分</string>
    <string name="Sensor">传感器</string>
    <string name="Vibrator">震动</string>
    <string name="Signal">电话</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Microphone">麦克风</string>
    <string name="Mic_start">开始录音</string>
    <string name="Mic_stop">停止录音并播放</string>
    <string name="Mic_play">开始播放</string>
    <string name="Mic_operation">麦克风选项</string>
    <string name="Speaker_operation">喇叭选项</string>
    <string name="Bluetooth">蓝牙</string>
    <string name="Bluetooth_open">蓝牙已经打开</string>
    <string name="Bluetooth_opening">蓝牙正在打开</string>
    <string name="Bluetooth_scaning">正在查找</string>
    <string name="Bluetooth_mac">MAC地址:</string>
    <string name="Bluetooth_scan_success">查找完成</string>
    <string name="GSensor">重力传感器</string>
    <string name="GSensor_info">竖立,平放,侧立,观察重力变化!</string>
    <string name="MSensor">磁力传感器</string>
    <string name="MSensor_default_text">未知数据</string>
    <string name="MSensor_North">正北</string>
    <string name="MSensor_East">正东</string>
    <string name="MSensor_South">正南</string>
    <string name="MSensor_West">正西</string>
    <string name="MSensor_north_east">北偏东</string>
    <string name="MSensor_south_east">南偏东</string>
    <string name="MSensor_south_west">南偏西</string>
    <string name="MSensor_north_west">北偏西</string>
    <string name="LSensor">光传感器</string>
    <string name="LSensor_default_text">未知数据</string>
    <string name="LSensor_accuracy">精度:</string>
    <string name="LSensor_value">数值:</string>
    <string name="LSensor_tips">在强光和黑暗地方观察数值变化!</string>
    <string name="LCD_increase">强背光</string>
    <string name="LCD_weaken">弱背光</string>
    <string name="Success">成功</string>
    <string name="Failed">失败</string>
    <string name="psensor_hello">PSensor 验证</string>
    <string name="psensor_app_name">距离传感器</string>
    <string name="proximity">接近 :</string>
    <string name="tips">请将手放置和离开感应区观看数值变化!</string>
    <string name="Earphone">听筒</string>
    <string name="battery_name">电 源</string>
    <string name="touchscreen_name">触 屏</string>
    <string name="speaker_name">喇 叭</string>
    <string name="wifi_name">WLAN</string>
    <string name="bluetooth_name">蓝 牙</string>
    <string name="headset_name">耳 机</string>
    <string name="earphone_name">听 筒</string>
    <string name="gps_name">GPS</string>
    <string name="vibrator_name">震 动</string>
    <string name="telephone_name">电 话</string>
    <string name="backlight_name">背景灯</string>
    <string name="memory_name">内 存</string>
    <string name="gsensor_name">重力传感</string>
    <string name="msensor_name">磁力传感</string>
    <string name="lsensor_name">光传感</string>
    <string name="psensor_name">距离传感</string>
    <string name="camera_name">后摄像头</string>
    <string name="sdcard_name">SD卡</string>
    <string name="fmradio_name">收音机</string>
    <string name="KeyCode_name">按 键</string>
    <string name="lcd_name">LCD</string>
    <string name="sim_name">SIM卡</string>
    <string name="microphone_name">语音回环</string>
    <string name="subcamera_name">前摄像头</string>
    <string name="headsethook_name">耳机Hook</string>
    <string name="sdcard">SD卡</string>
    <string name="sdcard_tips_success">已检测到内置SD卡</string>
    <string name="sdcard_tips_failed">没有测到内置SD卡</string>
    <string name="sdcard_totalsize">内置SD卡总容量:</string>
    <string name="sdcard_freesize">内置SD卡剩余容量:</string>
    <string name="sdcard2_tips_success">已检测到外置SD卡</string>
    <string name="sdcard2_tips_failed">没有测到外置SD卡</string>
    <string name="sdcard2_totalsize">外置SD卡总容量:</string>
    <string name="sdcard2_freesize">外置SD卡剩余容量:</string>
    <string name="FMRadio">收音机</string>
    <string name="FMRadio_notice">选择</string>
    <string name="KeyCode">按键</string>
    <string name="KeyCode_info">请开始按键</string>
    <string name="LCD">LCD</string>
    <string name="SimCard">SIM卡</string>
    <string name="sim1_info_ok">SIM1:正常</string>
    <string name="sim1_info_failed">SIM1:未发现</string>
    <string name="sim2_info_ok">SIM2:正常</string>
    <string name="sim2_info_failed">SIM2:未发现</string>
    <string name="sim_info_ok">SIM:正常</string>
    <string name="sim_info_failed">SIM:未发现</string>
    <string name="Report">测试报告</string>
    <string name="report_ok">成功</string>
    <string name="report_failed">失败</string>
    <string name="report_notest">未测试</string>
    <string name="menu_exit">退出测试</string>
    <string name="Mic_player">停止并播放</string>
    <string name="Fmsearch">FM搜台</string>
    <string name="hour">小时</string>
  <string name="TestResultTitleString">测试结果(全部成功)</string>
  <string name="test_result_ID_title">ID</string>
<string name="test_result_case_title">测试项</string>
<string name="test_result_case_success">通过次数</string>
<string name="test_result_case_all">总数</string>
</resources>