<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/result_bg"
    android:orientation="vertical" >

    <!--
       <Button
        android:id="@+id/btn_remove_test_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_test_result" />
    -->

    <TextView
        android:id="@+id/test_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_margin="5dp"
        android:paddingLeft="3dp"
        android:text="@string/TestResultTitleString"
        android:textColor="#007f00" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/list_bg_set"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/TableTextStyleTitle"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/test_result_ID_title" />

            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@drawable/line_v" />

            <TextView
                style="@style/TableTextStyleTitle"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/test_result_case_title" />

            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@drawable/line_v" />

            <TextView
                style="@style/TableTextStyleTitle"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/test_result_case_success" />

            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@drawable/line_v" />

            <TextView
                style="@style/TableTextStyleTitle"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/test_result_case_all" />

            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@drawable/line_v" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/line_h"
            android:dividerHeight="2dp"
            android:fadingEdge="none"
            android:scrollbars="none"
            android:scrollingCache="false" >

        </ListView>
    </LinearLayout>

</LinearLayout>